
[package]
name = "bits"
version = "0.1.0"
authors = ["Guy-PC\\Guy <tbk.guy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["combaseapi", "objbase", "commctrl", "bits", "winerror", "wtypesbase", "winnt"] }
